--- a/index.html
+++ b/index.html
@@ -584,7 +584,6 @@
                 <button class="monthly">Monthly</button>
                 <button class="yearly">Yearly</button>
             </div>
-            <button class="popular">Most Popular</button>
             <div class="prices_card_box">
                 <div class="prices_card">
                     <div class="brend_card_svg g">
@@ -621,73 +620,85 @@
                     <a href="#" class="seeFeatures">See Features</a>
                 </div>
                 <div class="prices_card">
+                    <button class="popular">Most Popular</button>
                     <div class="brend_card_svg g">
-                        <svg width="101.375610" height="102.000000" viewBox="0 0 101.376 102" fill="none"
+                        <svg width="82.693604" height="101.407227" viewBox="0 0 82.6936 101.407" fill="none"
                             xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
                             <desc>
                                 Created with Pixso.
                             </desc>
                             <defs />
                             <path id="Vector"
-                                d="M40.6594 40.4248C31.5146 40.4248 24.0742 47.8665 24.0742 57.0149C24.0742 58.0345 24.9005 58.8621 25.9214 58.8621L55.3938 58.8621C56.4135 58.8621 57.241 58.0345 57.241 57.0149C57.241 47.8677 49.803 40.4248 40.6594 40.4248ZM27.9004 55.1677C28.7981 48.9292 34.1783 44.1191 40.6594 44.1191C47.1393 44.1191 52.5159 48.9292 53.4148 55.1677L27.9004 55.1677Z"
+                                d="M81.5552 23.8428C83.1658 15.7534 83.8676 5.2998 78.0649 1.43652C72.2634 -2.43066 62.8884 2.23877 56.0417 6.83887C48.7548 11.7363 41.0786 18.873 37.7878 23.8081C36.2733 26.0811 33.6965 27.4014 30.9651 27.4014C25.6448 27.3984 17.9603 27.6543 14.5893 29.0308C9.5838 31.0776 0.461792 41.8857 0.0216675 46.29C-0.146973 47.9824 0.708557 48.8218 1.23553 49.1729C2.20386 49.8164 4.82501 50.0591 8.23474 50.0591C11.4457 50.0591 15.355 49.8423 19.2441 49.5415C19.8414 49.4951 20.2318 50.1577 19.8998 50.6562L19.8969 50.6597L19.8933 50.6646L19.8892 50.6714L12.965 61.062C9.28644 66.5913 8.49884 73.4404 10.5438 79.52C11.5511 82.5146 11.6607 85.897 9.90863 88.5259C8.69598 90.3438 8.29553 92.542 8.78278 94.7158C9.26141 96.8584 10.5497 98.7207 12.4108 99.959C13.8838 100.938 15.544 101.407 17.1744 101.407C19.8242 101.407 22.3907 100.167 23.9294 97.8623L24.7429 96.6416C25.9951 94.7627 28.2454 93.8774 30.5034 93.8774C37.4531 93.8774 44.1349 90.4243 48.1038 84.4727C51.4603 79.4346 59.039 80.564 61.6254 86.0376C62.5602 88.0161 63.4254 89.4204 64.1445 89.8999C64.4557 90.1069 64.969 90.355 65.6485 90.355C66.1159 90.355 66.6615 90.2373 67.274 89.9062C71.171 87.8008 77.6272 75.2168 77.5838 69.8135C77.5593 65.9414 74.4744 58.0454 72.3962 53.1587C71.5694 51.2148 71.7468 48.9805 72.918 47.2222C76.2075 42.29 79.8404 32.4575 81.5552 23.8428ZM58.1173 9.92627C66.2176 4.48145 72.9069 2.46582 76.0029 4.53125C79.1027 6.5957 79.8144 13.543 77.9074 23.1147C76.0587 32.4004 72.4407 41.231 69.822 45.1567L58.5121 62.1343C55.4502 66.731 49.2419 67.9746 44.6455 64.9126L33.0676 57.1997C33.0551 57.1914 33.0464 57.1802 33.0341 57.1729C33.0217 57.1641 33.0081 57.1602 32.9956 57.1514L32.3453 56.7183C27.7482 53.6562 26.5042 47.4473 29.5669 42.8506L37.8325 30.4453L40.8814 25.8687C43.5026 21.9434 50.2625 15.2046 58.1173 9.92627ZM10.2641 37.0718C12.2686 34.9448 14.3712 33.1392 15.9966 32.4736C16.767 32.1592 17.9053 31.9141 19.2642 31.7246C25.0886 30.9116 28.5892 37.6143 25.3283 42.5083C24.0854 44.3735 22.0654 45.582 19.8306 45.7539C18.2106 45.8784 16.5919 45.9883 15.0345 46.0786C9.05804 46.4258 6.15808 41.4282 10.2641 37.0718ZM16.061 63.124L19.4738 58.0024C20.8465 55.9424 23.6293 55.3853 25.6896 56.7573C27.7503 58.1304 28.3077 60.9136 26.9347 62.9741L24.1064 67.2183C20.0569 73.2949 11.7159 71.6226 14.9406 65.0708C15.2687 64.4043 15.6422 63.7539 16.061 63.124ZM20.8347 95.7969C19.4844 97.8193 16.6277 98.2964 14.4702 96.8608C13.4114 96.1562 12.6823 95.105 12.412 93.9023C12.1504 92.7305 12.3599 91.5527 13.0047 90.5879L16.6128 85.1733C16.6227 85.1572 16.6351 85.1426 16.645 85.1265L29.9113 65.2163C31.3511 63.0557 34.27 62.4712 36.431 63.9106C38.5923 65.3506 39.1771 68.27 37.737 70.4312L20.8347 95.7969ZM45.009 82.4082C44.7205 82.8413 44.4144 83.2583 44.0924 83.6587C39.3154 89.5962 34.2894 82.313 38.5151 75.9712L40.9518 72.314C42.3257 70.2524 45.1108 69.6943 47.1727 71.0684C49.2346 72.4419 49.7926 75.2271 48.4191 77.2891L45.009 82.4082ZM73.8629 69.8394C73.8763 71.5649 73.052 74.1382 71.8961 76.7578C69.461 82.2769 63.6359 81.5327 61.6401 75.8403C61.137 74.4053 60.6298 72.9121 60.1356 71.4126C59.4343 69.2847 59.7718 66.9565 61.0139 65.0918C64.2735 60.1982 71.8055 60.8457 73.2975 66.5327C73.646 67.8613 73.8577 69.0073 73.8629 69.8394Z"
                                 fill="#00A3FF" fill-opacity="1.000000" fill-rule="nonzero" />
                             <path id="Vector"
-                                d="M40.395 39.01C45.944 39.01 50.4585 34.4967 50.4585 28.9503C50.4585 23.4087 45.944 18.9004 40.395 18.9004C34.8547 18.9004 30.3477 23.4087 30.3477 28.9503C30.3477 34.4967 34.8547 39.01 40.395 39.01ZM40.395 22.5947C43.9072 22.5947 46.7642 25.4456 46.7642 28.9503C46.7642 32.46 43.9072 35.3157 40.395 35.3157C36.8916 35.3157 34.042 32.46 34.042 28.9503C34.042 25.4456 36.8916 22.5947 40.395 22.5947Z"
-                                fill="#00A3FF" fill-opacity="1.000000" fill-rule="nonzero" />
-                            <path id="Vector"
-                                d="M100.834 90.4219L81.5677 71.1681C81.2217 70.8221 80.7512 70.6276 80.2611 70.6276C80.2611 70.6276 80.2612 70.6276 80.2599 70.6276C79.771 70.6276 79.3007 70.8221 78.9534 71.1681L75.7922 74.3318L70.1053 68.6461C77.0433 61.3497 81.3141 51.4969 81.3141 40.6576C81.3141 18.239 63.0751 0 40.6564 0C18.239 -0.0012207 0 18.2378 0 40.6564C0 63.0763 18.239 81.3141 40.6576 81.3141C50.9108 81.3141 60.2833 77.4904 67.443 71.2063L73.1827 76.9448L70.5352 79.5938C69.8147 80.3153 69.8147 81.4852 70.5364 82.2056L89.8013 101.459C90.1472 101.805 90.6177 102 91.1078 102C91.5979 102 92.0671 101.805 92.4144 101.459L100.835 93.0338C101.181 92.6877 101.376 92.2173 101.376 91.7272C101.374 91.2371 101.18 90.7679 100.834 90.4219ZM3.69434 40.6564C3.69434 20.2747 20.2759 3.69312 40.6576 3.69312C61.0394 3.69312 77.621 20.2747 77.621 40.6564C77.621 61.0382 61.0394 77.6198 40.6576 77.6198C20.2759 77.6198 3.69434 61.0382 3.69434 40.6564ZM91.1053 97.5409L74.4548 80.8978L80.2637 75.0853L96.9153 91.7285L91.1053 97.5409Z"
+                                d="M49.2626 43.5654C51.4534 45.0249 53.932 45.7241 56.3845 45.7241C60.5504 45.7241 64.6442 43.7095 67.1241 39.9902L67.1252 39.9888L67.1263 39.9878C71.0612 34.0732 69.4541 26.063 63.5425 22.1289C60.6796 20.2217 57.2451 19.5425 53.8713 20.2168C50.4975 20.8916 47.5899 22.8394 45.6842 25.7012C43.7735 28.5664 43.094 32.0034 43.771 35.3799C44.4505 38.7534 46.4008 41.6611 49.2626 43.5654ZM48.7827 27.7632C50.1367 25.728 52.2048 24.3433 54.6028 23.8633C55.2067 23.7417 55.8154 23.6826 56.418 23.6826C58.2072 23.6826 59.9579 24.208 61.483 25.2236C65.6863 28.021 66.8295 33.7192 64.0298 37.9253C61.2288 42.1284 55.5278 43.2705 51.3257 40.4683C49.2886 39.1143 47.9011 37.0459 47.4213 34.647C46.939 32.2476 47.4225 29.8027 48.7827 27.7632Z"
                                 fill="#00A3FF" fill-opacity="1.000000" fill-rule="nonzero" />
                         </svg>
                     </div>
                     <h1 class="prices_card_title">
-                        Essential
+                        Professionel
                     </h1>
                     <h3 class="startup_title">
-                        Perfect For Stratups
+                        For Those Who Want To Grow
                     </h3>
                     <hr class="prices_card_line">
                     <h2 class="pirice_number">
-                        399.99$
+                        599.99$
                     </h2>
                     <h2 class="pirice_number h">
-                        349.99$
+                        519.99$
                     </h2>
                     <a href="#" class="seeFeatures">See Features</a>
                 </div>
                 <div class="prices_card">
                     <div class="brend_card_svg g">
-                        <svg width="101.375610" height="102.000000" viewBox="0 0 101.376 102" fill="none"
-                            xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
-                            <desc>
-                                Created with Pixso.
-                            </desc>
-                            <defs />
-                            <path id="Vector"
-                                d="M40.6594 40.4248C31.5146 40.4248 24.0742 47.8665 24.0742 57.0149C24.0742 58.0345 24.9005 58.8621 25.9214 58.8621L55.3938 58.8621C56.4135 58.8621 57.241 58.0345 57.241 57.0149C57.241 47.8677 49.803 40.4248 40.6594 40.4248ZM27.9004 55.1677C28.7981 48.9292 34.1783 44.1191 40.6594 44.1191C47.1393 44.1191 52.5159 48.9292 53.4148 55.1677L27.9004 55.1677Z"
-                                fill="#00A3FF" fill-opacity="1.000000" fill-rule="nonzero" />
-                            <path id="Vector"
-                                d="M40.395 39.01C45.944 39.01 50.4585 34.4967 50.4585 28.9503C50.4585 23.4087 45.944 18.9004 40.395 18.9004C34.8547 18.9004 30.3477 23.4087 30.3477 28.9503C30.3477 34.4967 34.8547 39.01 40.395 39.01ZM40.395 22.5947C43.9072 22.5947 46.7642 25.4456 46.7642 28.9503C46.7642 32.46 43.9072 35.3157 40.395 35.3157C36.8916 35.3157 34.042 32.46 34.042 28.9503C34.042 25.4456 36.8916 22.5947 40.395 22.5947Z"
-                                fill="#00A3FF" fill-opacity="1.000000" fill-rule="nonzero" />
-                            <path id="Vector"
-                                d="M100.834 90.4219L81.5677 71.1681C81.2217 70.8221 80.7512 70.6276 80.2611 70.6276C80.2611 70.6276 80.2612 70.6276 80.2599 70.6276C79.771 70.6276 79.3007 70.8221 78.9534 71.1681L75.7922 74.3318L70.1053 68.6461C77.0433 61.3497 81.3141 51.4969 81.3141 40.6576C81.3141 18.239 63.0751 0 40.6564 0C18.239 -0.0012207 0 18.2378 0 40.6564C0 63.0763 18.239 81.3141 40.6576 81.3141C50.9108 81.3141 60.2833 77.4904 67.443 71.2063L73.1827 76.9448L70.5352 79.5938C69.8147 80.3153 69.8147 81.4852 70.5364 82.2056L89.8013 101.459C90.1472 101.805 90.6177 102 91.1078 102C91.5979 102 92.0671 101.805 92.4144 101.459L100.835 93.0338C101.181 92.6877 101.376 92.2173 101.376 91.7272C101.374 91.2371 101.18 90.7679 100.834 90.4219ZM3.69434 40.6564C3.69434 20.2747 20.2759 3.69312 40.6576 3.69312C61.0394 3.69312 77.621 20.2747 77.621 40.6564C77.621 61.0382 61.0394 77.6198 40.6576 77.6198C20.2759 77.6198 3.69434 61.0382 3.69434 40.6564ZM91.1053 97.5409L74.4548 80.8978L80.2637 75.0853L96.9153 91.7285L91.1053 97.5409Z"
-                                fill="#00A3FF" fill-opacity="1.000000" fill-rule="nonzero" />
-                        </svg>
+                        <img src="./img/home/icons/torch.svg" alt="torch">
                     </div>
                     <h1 class="prices_card_title">
-                        Essential
+                        Enterprise
                     </h1>
                     <h3 class="startup_title">
-                        Perfect For Stratups
+                        Your Business Package
                     </h3>
                     <hr class="prices_card_line">
                     <h2 class="pirice_number">
-                        399.99$
+                        999.99$
                     </h2>
                     <h2 class="pirice_number h">
-                        349.99$
+                        849.99$
                     </h2>
                     <a href="#" class="seeFeatures">See Features</a>
                 </div>
+            </div>
+        </div>
+    </section>
+    <section class="talk">
+        <div class="talk_container">
+            <div class="talk_input_box">
+                <form action="#">
+                    <div class="form_names">
+                        <input required class="names" type="text" placeholder="First Name">
+                        <input required class="names" type="text" placeholder="Last Name">
+                    </div>
+                    <input required class="full_w" type="email" placeholder="Your Email">
+                    <input required class="full_w" type="text" placeholder="Company Name">
+                    <div class="form_names">
+                        <input required class="info" type="tel" placeholder="Phone Number">
+                        <input required class="info" type="text" placeholder="Adress">
+                    </div>
+                    <button class="send">
+                        SEND
+                    </button>
+                </form>
+            </div>
+            <div class="talk_content_box">
+                <h1 class="talk_title">Let’s Talk Business</h1>
+                <span class="talk_line"></span>
+                <p class="talk_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent quis condi mentum velit. Integer justo urna, tristique ut nulla tincidunt, viverra sollici tudin diam. Donec mi eros, rhoncus sit amet dapibus ut.</p>
+                <button class="contact_us">
+                    Contact  Us
+                </button>
             </div>
         </div>
     </section>
