--- a/index.html
+++ b/index.html
@@ -695,13 +695,40 @@
             <div class="talk_content_box">
                 <h1 class="talk_title">Let’s Talk Business</h1>
                 <span class="talk_line"></span>
-                <p class="talk_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent quis condi mentum velit. Integer justo urna, tristique ut nulla tincidunt, viverra sollici tudin diam. Donec mi eros, rhoncus sit amet dapibus ut.</p>
+                <p class="talk_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent quis condi mentum
+                    velit. Integer justo urna, tristique ut nulla tincidunt, viverra sollici tudin diam. Donec mi eros,
+                    rhoncus sit amet dapibus ut.</p>
                 <button class="contact_us">
-                    Contact  Us
+                    Contact Us
                 </button>
             </div>
         </div>
     </section>
+    <footer class="footer">
+        <div class="footer_container">
+            <div class="footer_box">
+                <ul class="footer_nav">
+                    <li class="footer_nav_item"><a href="#" class="footer_nav_link">Home</a></li>
+                    <li class="footer_nav_item"><a href="#" class="footer_nav_link">About</a></li>
+                    <li class="footer_nav_item"><a href="#" class="footer_nav_link">Services</a></li>
+                </ul>
+                <p class="footer_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed aliquet nulla in
+                    odio
+                    ves tibulum porta.</p>
+                <ul class="footer_list">
+                    <li class="footer_item"><a href="#" class="footer_link">FAQS</a></li>
+                    <li class="footer_item"><a href="#" class="footer_link">BLOGS</a></li>
+                    <li class="footer_item"><a href="#" class="footer_link">CONTACTS</a></li>
+                </ul>
+            </div>
+            <div class="footer_logo_box">
+                <a href="#" class="logo"><img src="./img/home/icons/facebook.svg" alt="Facebook logo"></a>
+                <a href="#" class="logo"><img src="./img/home/icons/twitter.svg" alt="Twitter logo"></a>
+                <a href="#" class="logo"><img src="./img/home/icons/linkedin.svg" alt="LinkedIn logo"></a>
+                <a href="#" class="logo"><img src="./img/home/icons/instagram.svg" alt="Instagram logo"></a>
+            </div>
+        </div>
+    </footer>
 </body>
 
 </html>
