--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Buisness WEB/home</title>
+    <meta name="google-site-verification" content="ZAw6EppHHpJXL1EPoGCdQS0Uzq30t6b1miGkDu_T86A" />
     <link rel="stylesheet" href="./css/style.css">
     <!-- <style>
         @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&family=Source+Code+Pro:wght@900&family=Syne:wght@400..800&display=swap')
