googlega qo'yish

--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Source+Code+Pro:wght@900&family=Syne:wght@400..800&display=swap"
         rel="stylesheet">
+        <meta name="keywords" content="Islomjon, Islom, kamolov, portfolio, islombek, business, biznes , bizness, dasturchi, developer, andijon, paxlavonjon">
+        <meta name="description" content="Bu saytni Islomjon Kamolov yaratgan. Bu sayt portfolio uchun ish sifatida tayyorlangan.">
 </head>
 
 <body>
