laptop version ended

--- a/index.html
+++ b/index.html
@@ -554,13 +554,13 @@
         <div class="partners_container">
             <h1 class="partners_title">Our Partners</h1>
             <div class="brands_box">
-                <img src="./img/home/icons/yBrand.svg" alt="Combinator brand">
+                <img class="lagatip" src="./img/home/icons/yBrand.svg" alt="Combinator brand">
                 <span class="brand_box_wall"></span>
-                <img src="./img/home/icons/sequioia_70b028d972.svg.svg" alt="sequoia brand">
+                <img class="lagatip" src="./img/home/icons/sequioia_70b028d972.svg.svg" alt="sequoia brand">
                 <span class="brand_box_wall"></span>
-                <img src="./img/home/icons/accel_1cb5297bba.svg.svg" alt="accel brand">
+                <img class="lagatip" src="./img/home/icons/accel_1cb5297bba.svg.svg" alt="accel brand">
                 <span class="brand_box_wall"></span>
-                <img src="./img/home/icons/a16z_3853ceb4aa.svg.svg" alt="a16z brand">
+                <img class="lagatip" src="./img/home/icons/a16z_3853ceb4aa.svg.svg" alt="a16z brand">
             </div>
         </div>
     </section>
