--- a/about.html
+++ b/about.html
@@ -142,6 +142,182 @@
             </div>
         </div>
     </section>
+    <section class="mind">
+        <div class="mind-container">
+            <h1 class="mind-title">Designed with Success In Mind</h1>
+            <div class="mind-box">
+                <img class="mind-img" src="./img/about/PNGs/diagramma.png" alt="diagramma">
+                <div class="mind-content">
+                    <h1 class="mind-content-title">
+                        The Best Choice For your Business
+                    </h1>
+                    <p class="mind-content-text">
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent quis condi mentum velit.
+                        Integer justo urna, tristique ut nulla tincidunt, viverra sollici tudin diam. Donec mi eros,
+                        rhoncus sit amet dapibus ut. Praesent sapien mi, mattis at dignissim eu, pellentesque eget
+                        sapien.
+                        Mauris viverra a nibh vel lacinia. Donec nec risus dui. Vivamus ultrices efficitur arcu, quis
+                        volutpat dolor mattis ac. Aenean sed tellus eget odio dapibus blandit sed posuere neque.
+                    </p>
+                    <h2 class="mind-content-title1">
+                        Reasons Why You Should Get Conect
+                    </h2>
+                    <ul class="mind-list">
+                        <li class="mind-item"><img src="./img/home/icons/ptichka.svg" alt="cheked icon"> Advanced
+                            extended reports</li>
+                        <li class="mind-item"><img src="./img/home/icons/ptichka.svg" alt="cheked icon"> JobbConnect
+                        </li>
+                        <li class="mind-item"><img src="./img/home/icons/ptichka.svg" alt="cheked icon"> Digital
+                            personnel file</li>
+                        <li class="mind-item"><img src="./img/home/icons/ptichka.svg" alt="cheked icon"> Onboarding &
+                            offboarding</li>
+                        <li class="mind-item"><img src="./img/home/icons/ptichka.svg" alt="cheked icon"> Employee
+                            calendar</li>
+                        <li class="mind-item"><img src="./img/home/icons/ptichka.svg" alt="cheked icon"> Courses and
+                            Trainings</li>
+                        <li class="mind-item"><img src="./img/home/icons/ptichka.svg" alt="cheked icon"> Management of
+                            sub-companies</li>
+                        <li class="mind-item"><img src="./img/home/icons/ptichka.svg" alt="cheked icon"> Detailed
+                            Project planing</li>
+                    </ul>
+                </div>
+            </div>
+            <div class="mind-box1">
+                <div class="mind-content">
+                    <h1 class="mind-content-title">
+                        The Best Choice For your Business
+                    </h1>
+                    <p class="mind-content-text">
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent quis condi mentum velit.
+                        Integer justo urna, tristique ut nulla tincidunt, viverra sollici tudin diam. Donec mi eros,
+                        rhoncus sit amet dapibus ut. Praesent sapien mi, mattis at dignissim eu, pellentesque eget
+                        sapien.
+                        Mauris viverra a nibh vel lacinia. Donec nec risus dui. Vivamus ultrices efficitur arcu, quis
+                        volutpat dolor mattis ac. Aenean sed tellus eget odio dapibus blandit sed posuere neque.
+                    </p>
+                </div>
+                <img class="mind-img" src="./img/about/PNGs/diagramma1.png" alt="diagramma">
+            </div>
+            <div class="mind-box">
+                <img class="mind-img" src="./img/about/PNGs/diagramma2.png" alt="diagramma">
+                <div class="mind-content">
+                    <h1 class="mind-content-title">
+                        The Best Choice For your Business
+                    </h1>
+                    <p class="mind-content-text">
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent quis condi mentum velit.
+                        Integer justo urna, tristique ut nulla tincidunt, viverra sollici tudin diam. Donec mi eros,
+                        rhoncus sit amet dapibus ut. Praesent sapien mi, mattis at dignissim eu, pellentesque eget
+                        sapien.
+                        Mauris viverra a nibh vel lacinia. Donec nec risus dui. Vivamus ultrices efficitur arcu, quis
+                        volutpat dolor mattis ac. Aenean sed tellus eget odio dapibus blandit sed posuere neque.
+                    </p>
+                    <h2 class="mind-content-title1">
+                        Reasons Why You Should Get Conect
+                    </h2>
+                    <ul class="mind-list">
+                        <li class="mind-item"><img src="./img/home/icons/ptichka.svg" alt="cheked icon"> Advanced
+                            extended reports</li>
+                        <li class="mind-item"><img src="./img/home/icons/ptichka.svg" alt="cheked icon"> JobbConnect
+                        </li>
+                        <li class="mind-item"><img src="./img/home/icons/ptichka.svg" alt="cheked icon"> Digital
+                            personnel file</li>
+                        <li class="mind-item"><img src="./img/home/icons/ptichka.svg" alt="cheked icon"> Onboarding &
+                            offboarding</li>
+                        <li class="mind-item"><img src="./img/home/icons/ptichka.svg" alt="cheked icon"> Employee
+                            calendar</li>
+                        <li class="mind-item"><img src="./img/home/icons/ptichka.svg" alt="cheked icon"> Courses and
+                            Trainings</li>
+                        <li class="mind-item"><img src="./img/home/icons/ptichka.svg" alt="cheked icon"> Management of
+                            sub-companies</li>
+                        <li class="mind-item"><img src="./img/home/icons/ptichka.svg" alt="cheked icon"> Detailed
+                            Project planing</li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="team">
+        <div class="team-container">
+            <div class="creating-top-box1">
+                <h1 class="creating-top-box-title">
+                    Business Made Easy With Team Connect
+                </h1>
+                <p class="creating-top-box-text">
+                    We are dedicated to creating tools that will help companies around the world improve their
+                    operations and achieve greater success. <br>
+                    Whether it's a new software program, a piece of machinery, or a streamlined process, we are
+                    constantly working to develop solutions that will make a real difference for businesses.
+                </p>
+            </div>
+            <div class="team-card-box">
+                <div class="team-card">
+                    <img class="worker-img" src="./img/about/PNGs/ofitsant.png" alt="vaqtinchalik">
+                    <div class="team-card-content">
+                        <h1 class="worker-name">Max Scholz</h1>
+                        <h3 class="worker-work">CEO Connect</h3>
+                        <div class="team-card-logo">
+                            <a href="#" class="logo">
+                                <img class="logo" src="./img/about/icons/facebook (1).svg" alt=".">
+                            </a>
+                            <a href="#" class="logo">
+                                <img src="./img/about/icons/twitter (1).svg" alt=".">
+                            </a>
+                            <a href="#" class="logo">
+                                <img src="./img/about/icons/linkedin (2).svg" alt=".">
+                            </a>
+                            <a href="#" class="logo">
+                                <img src="./img/about/icons/instagram.svg" alt="">
+                            </a>
+                        </div>
+                    </div>
+                </div>
+                <div class="team-card">
+                    <img class="worker-img" src="./img/about/PNGs/ofitsant.png" alt="vaqtinchalik">
+                    <div class="team-card-content">
+                        <h1 class="worker-name">Max Scholz</h1>
+                        <h3 class="worker-work">CEO Connect</h3>
+                        <div class="team-card-logo">
+                            <a href="#" class="logo">
+                                <img class="logo" src="./img/about/icons/facebook (1).svg" alt=".">
+                            </a>
+                            <a href="#" class="logo">
+                                <img src="./img/about/icons/twitter (1).svg" alt=".">
+                            </a>
+                            <a href="#" class="logo">
+                                <img src="./img/about/icons/linkedin (2).svg" alt=".">
+                            </a>
+                            <a href="#" class="logo">
+                                <img src="./img/about/icons/instagram.svg" alt="">
+                            </a>
+                        </div>
+                    </div>
+                </div>
+                <div class="team-card">
+                    <img class="worker-img" src="./img/about/PNGs/ofitsant.png" alt="vaqtinchalik">
+                    <div class="team-card-content">
+                        <h1 class="worker-name">Max Scholz</h1>
+                        <h3 class="worker-work">CEO Connect</h3>
+                        <div class="team-card-logo">
+                            <a href="#" class="logo">
+                                <img class="logo" src="./img/about/icons/facebook (1).svg" alt=".">
+                            </a>
+                            <a href="#" class="logo">
+                                <img src="./img/about/icons/twitter (1).svg" alt=".">
+                            </a>
+                            <a href="#" class="logo">
+                                <img src="./img/about/icons/linkedin (2).svg" alt=".">
+                            </a>
+                            <a href="#" class="logo">
+                                <img src="./img/about/icons/instagram.svg" alt="">
+                            </a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
     <script src="./js/app1.js"></script>
 </body>
 
