--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                 <li class="nav-item"><a href="#" class="nav-link">Perfect Workflow</a></li>
                 <li class="nav-item"><a href="#" class="nav-link">JobbConnect</a></li>
                 <li class="nav-item"><a href="#" class="nav-link item">Products</a></li>
-                <li class="nav-item"><a href="#" class="nav-link">About Us</a></li>
+                <li class="nav-item"><a href="./about.html" class="nav-link">About Us</a></li>
             </ul>
             <div class="hamburger_search_box">
                 <button class="search_button">
@@ -91,7 +91,7 @@
                     <li class="responsive_nav_item"><a href="#" class="responsive_nav_link">Perfect Workflow</a></li>
                     <li class="responsive_nav_item"><a href="#" class="responsive_nav_link">JobbConnect</a></li>
                     <li class="responsive_nav_item"><a href="#" class="responsive_nav_link">Products</a></li>
-                    <li class="responsive_nav_item"><a href="#" class="responsive_nav_link">About Us</a></li>
+                    <li class="responsive_nav_item"><a href="./about.html" class="responsive_nav_link">About Us</a></li>
                 </ul>
             </div>
             </button>
